--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>OSINT Platform - Intelligence Investigation Tools</title>
-    <meta name="description" content="Professional OSINT platform for intelligence gathering, network mapping, and digital investigation. Search by NIK, phone, email, username, and more." />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
